--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,30 +2,28 @@ name: Build + Test
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
-
   build:
     name: Build
     runs-on: ubuntu-latest
     steps:
+      - name: Set up Go 1.x
+        uses: actions/setup-go@v2
+        with:
+          go-version: ^1.17
 
-    - name: Set up Go 1.x
-      uses: actions/setup-go@v2
-      with:
-        go-version: ^1.17
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
 
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
+      - name: Build
+        run: go get github.com/sertifier/besticon/...
 
-    - name: Build
-      run: go get github.com/mat/besticon/...
+      - run: make test
 
-    - run: make test
+      - run: make test_bench
 
-    - run: make test_bench
-      
-    - run: make test_race
+      - run: make test_race
